# flash

./: CHANGES  HPUX.Install  INSTALL  Makefile  Makefile.bsd  Makefile.hp  Makefile.in  THANKS  TODO  acconfig.h  acconfig.h.cln  config.h  config.h.cln  config.h.in  config.status  configure.OK  configure.in  crypt.c  debug.c  debug.h  event.c  event.h  exec.c  exec.h  flash.1  main.c  menu.c  menu.h  misc.c  misc.h  module.c  module.h  parse.c  parse.h  parseline.c  parseline.h  rc.c  rc.h  screen.h  set.c  (+6 more)
modules/: Makefile  Makefile.in  README.countdown  alarms.c  background.c  countdown.c
sample-config/: system.flashlogin  system.menu  system.menu.cln  system.module  system.rc
screens/: nc_about.c  nc_init.c  nc_job.c  nc_lock.c  nc_menus.c  nc_misc.c  nc_module.c  ncr_scr.h
