dnl Process this file with autoconf to produce a configure script.
AC_INIT(exec.c)
AC_CONFIG_HEADER(config.h)

AC_PREFIX_DEFAULT(/usr/slocal/)

dnl Checks for programs.
AC_PROG_CC

dnl Checks for libraries.
dnl Replace `main' with a function in -ldl:
AC_CHECK_LIB(dl, main)
dnl Replace `main' with a function in -lncurses:
AC_CHECK_LIB(ncurses, main)

dnl Checks for header files.
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS(fcntl.h sys/time.h syslog.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_DECL_SYS_SIGLIST
AC_HEADER_TIME
AC_STRUCT_TM

dnl Checks for library functions.
AC_FUNC_GETPGRP
AC_FUNC_MEMCMP
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(mktime select strerror)

AC_PROG_INSTALL

AC_ARG_ENABLE(
	maildir, 
	[  --enable-maildir        build in maildir support],
	AC_DEFINE(MAILDIR)
)   

AC_PATH_PROG(PGR,less)
if test "$PGR" = "" ; then 
	AC_PATH_PROG(PGR,more)
	if test "$PGR" = "" ; then                                                                     		echo "Cant find a pager in youre path!!!\n" 
	fi
fi
AC_DEFINE_UNQUOTED(PAGER,"$PGR")

AC_DEFINE(DELIM,':')
AC_DEFINE(ESCAPE,'\\')
AC_DEFINE(PATH_TO_GPL,"COPYING")
AC_DEFINE(PATH_TO_HELP,"system.help")
AC_DEFINE(DEFAULT_MENU,"system.menu")
dnl  of course this will need to get its root from somewhere....steve why does the code have such strict paths???
AC_DEFINE(LIBPREFIX,"/lib/flash")



AC_OUTPUT(modules/Makefile Makefile)
